--- a/resources/qalculator_window.ui
+++ b/resources/qalculator_window.ui
@@ -15,12 +15,15 @@
 
                 <child>
                     <object class="GtkFrame">
+                        <style>
+                            <class name="label-class"/>
+                        </style>
+
                         <property name="margin-bottom">12</property>
 
                         <child type="label">
                             <object class="GtkLabel" id="label">
                                 <property name="label">0</property>
-                                <property name="max-width-chars">20</property>
                             </object>
                         </child>
                     </object>
